--- a/index.html
+++ b/index.html
@@ -41,30 +41,30 @@
                       is-open="datepicker.opened"
                       datepicker-options="to.datepickerOptions" />
         <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="datepicker.open($event)" ng-disabled="to.disabled"><i class="glyphicon glyphicon-calendar"></i></button>
+            <button type="button" class="btn btn-default date-picker" ng-click="datepicker.open($event)" ng-disabled="to.disabled"><i class="glyphicon glyphicon-calendar"></i></button>
         </span>
           </p>
       </script>
 
       <script type="text/ng-template" id="repeatSection.html">
-          <div>
               <!--loop through each element in model array-->
               <div class="{{hideRepeat}}">
-                  <div class="repeatsection" ng-repeat="element in model[options.key]" ng-init="fields = copyFields(to.fields)">
-                      <formly-form fields="fields"
-                                   model="element"
-                                   form="form">
-                      </formly-form>
-                      <div style="margin-bottom:20px;">
-                          <button type="button" class="btn btn-sm btn-danger" ng-click="model[options.key].splice($index, 1)">
-                              Remove
+                  <fieldset>
+                      <legend>{{to.title}}</legend>
+                      <div class="repeatsection well" style="position:relative" ng-repeat="element in model[options.key]" ng-init="fields = copyFields(to.fields)">
+                          <button class="btn btn-danger btn-circle" ng-click="model[options.key].splice($index, 1)">
+                              <i class="glyphicon glyphicon-remove"></i>
                           </button>
+                          <formly-form fields="fields"
+                                       model="element"
+                                       form="form">
+                          </formly-form>
                       </div>
-                      <hr>
-                  </div>
-                  <p class="AddNewButton">
+                  </fieldset>
+                  <p class="AddNewButton text-right">
                       <button type="button" class="btn btn-primary" ng-click="addNew()" >{{to.btnText}}</button>
                   </p>
+                  <hr>
               </div>
       </script>
 </body>
