Work on Edit Screen

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
 	<script src="node_modules/angular/angular.js"></script>
@@ -9,9 +10,11 @@
     <script src="node_modules/api-check/dist/api-check.js"></script>
 	<script src="node_modules/angular-formly/dist/formly.js"></script>
 	<script src="node_modules/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.js"></script>
+	<script src="node_modules/angular-ui-grid/ui-grid.min.js"></script>
 	<script src="app.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css" />
+	<link rel="stylesheet" href="node_modules/angular-ui-grid/ui-grid.min.css" />
 	<link rel="stylesheet" href="css/app.css" />
 </head>
 
